--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -28,6 +28,7 @@
          <th> First-Name </th>
          <th> Last-Name </th>
          <th> Enabled </th>
+        <th> test </th>
          <th></th>
       </tr>
     </thead>
